Fixed alignment of Twitter button on mobile

--- a/css/head.scss
+++ b/css/head.scss
@@ -260,10 +260,20 @@ body {
       width: 100%;
       margin-top: 20px;
     }
+  }
 
+  .post {
     &__credits {
-      margin-top: 30px;
+      margin-top: 40px;
     }
+
+    &__comments {
+      margin-top: 40px;
+    }
+  }
+
+  .credits {
+    justify-content: center;
   }
 
   img {
